- Addressed review comments from Sharad. - Modified v3.0 files with Cynara's doc changes as they were not placed in v3.0 folder earlier.

--- a/fam_backup.html
+++ b/fam_backup.html
@@ -44,6 +44,7 @@
 				<li><a href="fam_allocate.html">fam_allocate</a></li>
 				<li><a href="fam_deallocate.html">fam_deallocate</a></li>
 				<li><a href="fam_change_permissions.html">fam_change_permissions</a></li>
+				<li><a href="fam_close.html">fam_close</a></li>
 			</ul>
 			<hr>
 			Memory Map
@@ -219,7 +220,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2022, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2022-23, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
