--- a/release_notes.html
+++ b/release_notes.html
@@ -44,6 +44,7 @@
 				<li><a href="fam_allocate.html">fam_allocate</a></li>
 				<li><a href="fam_deallocate.html">fam_deallocate</a></li>
 				<li><a href="fam_change_permissions.html">fam_change_permissions</a></li>
+				<li><a href="fam_close.html">fam_close</a></li>
 			</ul>
 			<hr>
 			Memory Map
