--- a/v3.0/fam_fetch_TYPE.html
+++ b/v3.0/fam_fetch_TYPE.html
@@ -188,8 +188,7 @@ int main(void) {
 		// look up the descriptor to a previously allocated data item
 		Fam_Descriptor *descriptor = myFam-&gt;fam_lookup("myItem", "myRegion");
 	
-		// Atomically replace a value of first integer element in the array
-		// with the Bitwise XOR of it and a value of 0x444
+		// Fetching int32 value from offset 0 using FAM descriptor.
 		uint32_t value = myFam-&gt;fam_fetch_int32(descriptor, 0);
 
 		// The first integer in FAM is in local variable value
@@ -205,7 +204,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021-23, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
