- Updates to release notes - Updates to fam_initialize API.

--- a/v3.1/fam_initialize.html
+++ b/v3.1/fam_initialize.html
@@ -138,9 +138,9 @@ typedef struct {
 	char *runtime;
 	char *fam_default_memory_type;
 	char *if_device;
-        void *local_buf_addr;
-        uint64_t local_buf_size;
 } Fam_Options;
+<p>Two additional fields have been added in Fam_Options to achieve better performance with Slingshot interconnect. </p>
+<p>More details can be found <a href="fam_initialize_internal.html">here</a>.<p>
 	</pre>
 	<table>
 		<tbody>
@@ -233,27 +233,6 @@ typedef struct {
 				<td>
 					"ib0" for infiniband,  "cxi0" for cxi device.
 				</td>
-			</tr>
-			<tr>
-				<td class="code">
-					local_buf_addr	
-				</td>
-				<td>
-					Local buffer address to be registered via client for better performance.	
-				</td>
-				<td>
-					No default value available.
-				</td>
-			</tr>
-			<tr>
-				<td class="code">
-					local_buf_size
-				</td>
-				<td>
-					Local buffer size is the size of local buffer to be registered via client.	
-				</td>
-				<td>
-				        No default value available.					</td>
 			</tr>
 		</tbody>
 	</table>
