Added newline for better visibility.

--- a/fam_initialize.html
+++ b/fam_initialize.html
@@ -139,8 +139,8 @@ typedef struct {
 	char *fam_default_memory_type;
 	char *if_device;
 } Fam_Options;
-<p>Two additional fields have been added in Fam_Options to achieve better performance with Slingshot interconnect. </p>
-<p>More details can be found <a href="fam_initialize_internal.html">here</a>.<p>
+<br>Two additional fields have been added in Fam_Options to achieve better performance with Slingshot interconnect. 
+<br>More details can be found <a href="fam_initialize_internal.html">here</a>.
 	</pre>
 	<table>
 		<tbody>
