--- a/release_notes.html
+++ b/release_notes.html
@@ -110,7 +110,8 @@
 <p>
 The current version of OpenFAM is 3.1. It contains the following changes and enhancements over version 3.0:
 <ul>
-<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing --rpc_framework=thallium to openfam_adm script (or in the arg file). Steps for thallium installation can be found <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. To fall back to grpc, --rpc_framework=grpc can be used by application developers. The default option is grpc.</li>
+<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing --rpc_framework=thallium to openfam_adm script (or in the arg file). Steps for thallium installation can be found <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. 
+<br>To fall back to grpc, --rpc_framework=grpc can be used by application developers. The default option is grpc.</li>
 <li>Improvements to memory registrations: OpenFAM 3.0 registered each data item separately with libfabric, leading to excessive memory registrations as the number of data items increases. As a result, scalability suffers because the underlying memory registration caches become inefficient. OpenFAM 3.1 introduces an alternative approach to register entire region in place of registering data items, thereby reducing the number of memory registrations needed.</li>
 <li>Performance improvements for slingshot interconnect:
 <ul>
