--- a/release_notes.html
+++ b/release_notes.html
@@ -110,8 +110,8 @@
 <p>
 The current version of OpenFAM is 3.1. It contains the following changes and enhancements over version 3.0:
 <ul>
-<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing --rpc_framework=thallium to openfam_adm script (or in the arg file). Steps for thallium installation can be found <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. 
-<br>To fall back to grpc, --rpc_framework=grpc can be used by application developers. The default option is grpc.</li>
+<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing <code>--rpc_framework=thallium</code> to openfam_adm script (or in the arg file). Steps for thallium installation can be found <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. 
+<br>To fall back to grpc, <code>--rpc_framework=grpc</code> can be used by application developers. The default option is grpc.</li>
 <li>Improvements to memory registrations: OpenFAM 3.0 registered each data item separately with libfabric, leading to excessive memory registrations as the number of data items increases. As a result, scalability suffers because the underlying memory registration caches become inefficient. OpenFAM 3.1 introduces an alternative approach to register entire region in place of registering data items, thereby reducing the number of memory registrations needed.</li>
 <li>Performance improvements for slingshot interconnect:
 <ul>
@@ -120,8 +120,8 @@ The current version of OpenFAM is 3.1. It contains the following changes and enh
 <li>
 OpenFAM APIs changes:
 <ul>
-<li>fam_create_region API has been modified. A new region specific attribute called permissionLevel has been added to a structure called Fam_Region_Attributes. See  <a href="fam_create_region.html"> fam_create_region</a> API for more details.</li>
-<li>A new API by name fam_close has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See  <a href="fam_close.html"> fam_close</a> API for more details.</li>
+<li><code>fam_create_region</code> API has been modified. A new region specific attribute called permissionLevel has been added to a structure called Fam_Region_Attributes. See  <code><a href="fam_create_region.html">fam_create_region</a></code> API for more details.</li>
+<li>A new API by name <code>fam_close</code> has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See <code> <a href="fam_close.html"> fam_close</a></code> API for more details.</li>
 </ul>
 </li>
 <li>
@@ -138,7 +138,7 @@ If a region is destroyed without opening any data items within it, or if a regio
 			<li>Multi-threaded support has been added that enables OpenFAM to be used with multi-threaded applications. See <a href="multithread.html">multi-threaded environment</a> for more details.</li>
 			<li>Performance improvements:
 				Data item interleaving feature has been added in which a given data item will span across multiple memory servers. This has been done to uniformly distribute the load across multiple memory servers, thus reducing the network bottlenecks, and thereby improving the overall performance. Data item interleaving is enabled by default. See  <a href="interleaving.html">Data Item Interleaving </a> for more details.</li>
-			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <a href="fam_context_open.html"> fam_context_open API </a> for more details.</li>
+			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <code><a href="fam_context_open.html">fam_context_open</a></code> API for more details.</li>
 			<li>		OpenFAM APIs changes:
 		<ul>
 		<li>fam_create_region API has been modified. Region specific attributes like redundancyLevel, etc should now be 
@@ -179,6 +179,7 @@ specified using a structure called Fam_Region_Attributes.</li>
 		</ul>
 		<h2>Documentation updates</h2>
 		<ul>
+				<li><a href="v3.1/index.html">OpenFAM version 3.1</a></li>
 				<li><a href="v3.0/index.html">OpenFAM version 3.0</a></li>
 				<li><a href="v2.0/index.html">OpenFAM version 2.0</a></li>
 				<li><a href="v1.0/index.html">OpenFAM version 1.0</a></li>
