--- a/v3.1/fam_backup.html
+++ b/v3.1/fam_backup.html
@@ -106,7 +106,7 @@
 		</nav>
 		<article>
 			<h1 class="code">openfam::fam::fam_backup</h1>
-	<p>backup data from one FAM-resident data item to another FAM-resident data item.</p>
+	<p>backup data from one FAM-resident data item to an archival storage.</p>
 	<h2>Synopsis</h2>
 	<p class="code">void *fam_backup(Fam_Descriptor *src, const char *BackupName,
                      Fam_Backup_Options *backupOptions);</p>
@@ -220,7 +220,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2022-23, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2022-24, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
