Changes to v3.0/fam_backup.html
Signed-off-by: ramya-ahobala <ramya.ahobala@hpe.com>

--- a/v3.0/fam_backup.html
+++ b/v3.0/fam_backup.html
@@ -105,7 +105,7 @@
 		</nav>
 		<article>
 			<h1 class="code">openfam::fam::fam_backup</h1>
-	<p>backup data from one FAM-resident data item to another FAM-resident data item.</p>
+	<p>backup data from one FAM-resident data item to an archival storage.</p>
 	<h2>Synopsis</h2>
 	<p class="code">void *fam_backup(Fam_Descriptor *src, const char *BackupName,
                      Fam_Backup_Options *backupOptions);</p>
