--- a/v3.2/release_notes_internal.html
+++ b/v3.2/release_notes_internal.html
@@ -106,37 +106,31 @@
 		<h1>OpenFAM release notes</h1>
 		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
 		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
-		<h2>OpenFAM version 3.2 (release v3.2.0)</h2>
-<p>
-The current version of OpenFAM is 3.2. It contains the following changes and enhancements over version 3.1:
-<ul>
-<li> Added support for Slingshot Interconnect with cxi provider.
-<li> Hybrid MR support.
-
 		<h2>OpenFAM version 3.1 (release v3.1.0)</h2>
 <p>
-OpenFAM version 3.1 contains the following changes and enhancements over version 3.0:
+The current version of OpenFAM is 3.1. It contains the following changes and enhancements over version 3.0:
 <ul>
-<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing <code>--rpc_framework=thallium</code> to openfam_adm script (or in the arg file). Steps for thallium installation can be found <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. 
+<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing <code>--rpc_framework=thallium</code> to openfam_adm script (or in the arg file). Steps for thallium installation can be found See  <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. 
 <br>To fall back to grpc, <code>--rpc_framework=grpc</code> can be used by application developers. The default option is grpc.</li>
 <li>Improvements to memory registrations: OpenFAM 3.0 registered each data item separately with libfabric, leading to excessive memory registrations as the number of data items increases. As a result, scalability suffers because the underlying memory registration caches become inefficient. OpenFAM 3.1 introduces an alternative approach to register entire region in place of registering data items, thereby reducing the number of memory registrations needed.</li>
-<li>Performance improvements for slingshot interconnect:
+<li>Small I/O Performance improvements:
 <ul>
-<li>Few performance improvements have been done while using OpenFAM with slingshot inteconnect. More details can be found <a href="release_notes_internal.html"> here.</a></li>
+<li>Added support for huge pages, using which application can improve performance of random scatter/gather from multiple PEs.</li>
+<li>Added support for hybrid MR, applications can use it through new fam_options field. Hybrid MR improves the performance of multi-threaded applications or when large number of local buffers are used for FAM operations.</li>
 </ul>
 <li>
 OpenFAM APIs changes:
 <ul>
 <li><code>fam_create_region</code> API has been modified. A new region specific attribute called permissionLevel has been added to a structure called Fam_Region_Attributes. See  <code><a href="fam_create_region.html">fam_create_region</a></code> API for more details.</li>
-<li>A new API by name <code>fam_close</code> has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See <code> <a href="fam_close.html"> fam_close</a></code> API for more details.</li>
+<li>A new API by name <code>fam_close</code> has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See <code> <a href="fam_close.html">fam_close</a></code> API for more details.</li>
 </ul>
-</li>
 <li>
 Known Issues:
 <ul>
-If a region is destroyed without opening any data items within it, or if a region is destroyed without closing all the opened data items, the registered memory might be stranded.
+If a region is destroyed without opening any data items within it, or if a region is destroyed without closing all the opened data items,  the registered memory might be stranded. 
 </ul>
 </li>
+
 </ul>
 		<h2>OpenFAM version 3.0 (release v3.0.0)</h2>
 		<p>OpenFAM 3.0 contains the following changes and enhancements over version 2.0:</p>
@@ -145,7 +139,7 @@ If a region is destroyed without opening any data items within it, or if a regio
 			<li>Multi-threaded support has been added that enables OpenFAM to be used with multi-threaded applications. See <a href="multithread.html">multi-threaded environment</a> for more details.</li>
 			<li>Performance improvements:
 				Data item interleaving feature has been added in which a given data item will span across multiple memory servers. This has been done to uniformly distribute the load across multiple memory servers, thus reducing the network bottlenecks, and thereby improving the overall performance. Data item interleaving is enabled by default. See  <a href="interleaving.html">Data Item Interleaving </a> for more details.</li>
-			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <code><a href="fam_context_open.html">fam_context_open</a></code> API for more details.</li>
+			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <code><a href="fam_context_open.html"> fam_context_open</a></code> API for more details.</li>
 			<li>		OpenFAM APIs changes:
 		<ul>
 		<li>fam_create_region API has been modified. Region specific attributes like redundancyLevel, etc should now be 
