--- a/v3.2/release_notes.html
+++ b/v3.2/release_notes.html
@@ -111,11 +111,10 @@
 The current version of OpenFAM is 3.2. It contains the following changes and enhancements over version 3.1:</p>
 <ul>
 <li> Added support for Slingshot Interconnect with cxi provider.
-<li> Hybrid MR support.
 <li> Small I/O Performance improvements:
 <ul>
 <li>Added support for huge pages, using which application can improve performance of random scatter/gather from multiple PEs.</li>
-<li>Added support for hybrid MR, applications can use it through new fam_options field. Hybrid MR improves the performance of multi-threaded applications or when large number of local buffers are used for FAM operations.</li>
+<li>Added support for hybrid MR, using which improves the performance of multi-threaded applications.</li>
 </ul>
 </ul>
 
