--- a/v3.2/release_notes.html
+++ b/v3.2/release_notes.html
@@ -110,8 +110,7 @@
 <p>
 The current version of OpenFAM is 3.2. It contains the following changes and enhancements over version 3.1:</p>
 <ul>
-<li> Added support for Slingshot Interconnect with cxi provider.
-<li> Small I/O Performance improvements:
+<li> Added support for Slingshot Interconnect with cxi provider. cxi provider additionally support features that improve small I/O performance. Following features have been incorporated in OpenFAM:
 <ul>
 <li>Added support for huge pages, using which application can improve performance of random scatter/gather from multiple PEs.</li>
 <li>Added support for hybrid MR, using which improves the performance of multi-threaded applications.</li>
