--- a/release_notes.html
+++ b/release_notes.html
@@ -106,9 +106,21 @@
 		<h1>OpenFAM release notes</h1>
 		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
 		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
+		<h2>OpenFAM version 3.2 (release v3.2.0)</h2>
+<p>
+The current version of OpenFAM is 3.2. It contains the following changes and enhancements over version 3.1:</p>
+<ul>
+	<li> Added support for Slingshot Interconnect with cxi provider. cxi provider additionally support features that improve small I/O performance. <br/>Following features have been incorporated in OpenFAM:
+<ul>
+<li>Added support for huge pages, using which application can improve performance of random scatter/gather from multiple PEs.</li>
+<li>Added support for hybrid MR, using which improves the performance of multi-threaded applications.</li>
+</ul>
+</ul>
+
+
 		<h2>OpenFAM version 3.1 (release v3.1.0)</h2>
 <p>
-The current version of OpenFAM is 3.1. It contains the following changes and enhancements over version 3.0:
+OpenFAM version 3.1 contains the following changes and enhancements over version 3.0:</p>
 <ul>
 <li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by passing <code>--rpc_framework=thallium</code> to openfam_adm script (or in the arg file). Steps for thallium installation can be found <a href="https://mochi.readthedocs.io/en/latest/installing.html">here</a>. 
 <br>To fall back to grpc, <code>--rpc_framework=grpc</code> can be used by application developers. The default option is grpc.</li>
@@ -130,6 +142,7 @@ Known Issues:
 If a region is destroyed without opening any data items within it, or if a region is destroyed without closing all the opened data items, the registered memory might be stranded.
 </ul>
 </li>
+</ul>
 </ul>
 		<h2>OpenFAM version 3.0 (release v3.0.0)</h2>
 		<p>OpenFAM 3.0 contains the following changes and enhancements over version 2.0:</p>
@@ -187,7 +200,7 @@ specified using a structure called Fam_Region_Attributes.</li>
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021-23, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021-24, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
